--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | NFT preview card component</title>
-
-
 </head>
 <body>
   <div class="card">
-    <img src="images/image-equilibrium.jpg" alt="etherium image" class="card__image">
+    <div class="image__box">
+      <img src="images/image-equilibrium.jpg" alt="etherium image" class="card__image">
+      <div class="image__background"></div>
+      <img class="view__icon" src="images/icon-view.svg" alt="view icon">
+    </div>
     <div class="card__title">
       Equilibrium #3429
     </div>
@@ -35,9 +36,5 @@
       <p> Creation of <span class="author--name">Jules Wyvern</span>.</p>
     </div>
   </div>
-
-
-  
-
 </body>
 </html>
